fix: updated tests && dockerfile
